# fluence-zero

./: .gitignore  Cargo.toml  README.md  fluence.yaml
.fluence/: provider-artifacts.yaml  provider-secrets.yaml  workers.yaml
.fluence/aqua/: deals.aqua  services.aqua
.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
.fluence/service-configs/: myService_Config.toml
src/aqua/: main.aqua
src/frontend/: package-lock.json  package.json
src/frontend/src/: index.ts
src/gateway/: package.json
src/gateway/src/compiled-aqua/: main.ts
src/services/myService/myService/: Cargo.toml  module.yaml
src/services/myService/myService/src/: main.rs
