[package]
name = "myService"
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

[[bin]]
name = "myService"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.34.0", default-features = false, features = [
  "rt",
  "sync",
] }
marine-rs-sdk = "0.14.0"
surrealdb = { git = "https://github.com/surrealdb/surrealdb", default-features = false, features = [
  "kv-mem",
] }
serde = "1.0.203"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
