[package]
name = "myService"
version = "0.1.0"
edition = "2018"

# [build]
# target = "wasm32-unknown-unknown"

[[bin]]
name = "myService"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.14.0"
tokio = { version = "1.38.0", default-features = false, features = [
  "rt",
  "sync",
] }
surrealdb = { git = "https://github.com/indexnetwork/surrealdb", default-features = false, features = [
  "kv-mem",
] }
serde = "1.0.203"
serde_json = "1.0.117"
once_cell = "1.19.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "std",
  "env-filter",
  "fmt",
] }
bincode = "1.3.3"
tracing = "0.1.40"


[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
